[gd_scene load_steps=7 format=3 uid="uid://bjx4uhitviqk"]

[ext_resource type="Script" path="res://Scripts/gamemanager.gd" id="1_wbscx"]
[ext_resource type="Texture2D" uid="uid://c5ci1h4sy7vl0" path="res://Graphics/BG.svg" id="2_6mn2o"]
[ext_resource type="PackedScene" uid="uid://8hibn6tlhgyc" path="res://Scenes/timer.tscn" id="3_uvgru"]
[ext_resource type="Script" path="res://Scripts/MainSpeechBubble.gd" id="4_dkayj"]
[ext_resource type="Texture2D" uid="uid://dxkvdkudhnxw" path="res://Graphics/Bubble_MainThought.png" id="5_7o4xv"]
[ext_resource type="FontFile" uid="uid://da6e1h5sqwp1d" path="res://Fonts/ComicMono.ttf" id="6_g0g3s"]

[node name="Game" type="Node2D"]
script = ExtResource("1_wbscx")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(960, 544)
texture = ExtResource("2_6mn2o")

[node name="Timer" parent="." instance=ExtResource("3_uvgru")]

[node name="InputField" type="LineEdit" parent="."]
offset_left = 256.0
offset_top = 896.0
offset_right = 1664.0
offset_bottom = 960.0

[node name="MainSpeechBubble" type="Node2D" parent="."]
script = ExtResource("4_dkayj")

[node name="SpeechBubble BG" type="Sprite2D" parent="MainSpeechBubble"]
position = Vector2(982, 442)
scale = Vector2(0.892832, 1.02653)
texture = ExtResource("5_7o4xv")

[node name="Content" type="RichTextLabel" parent="MainSpeechBubble"]
offset_left = 378.0
offset_top = 238.0
offset_right = 1587.0
offset_bottom = 470.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("6_g0g3s")
theme_override_font_sizes/normal_font_size = 64
text = "The Quick Brown Fox Jumps Over The Lazy Dog"
fit_content = true
scroll_active = false
shortcut_keys_enabled = false

[connection signal="text_changed" from="InputField" to="MainSpeechBubble" method="_on_text_changed"]
[connection signal="text_submitted" from="InputField" to="MainSpeechBubble" method="_on_text_submitted"]
